objects/Object2__c.object
<CustomObject>
    <fields>
        <fullName>L2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object1</label>
        <referenceTo>Object1__c</referenceTo>
        <relationshipLabel>Object2 (Object1)</relationshipLabel>
        <relationshipName>Object21</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object1</label>
        <referenceTo>Object1__c</referenceTo>
        <relationshipLabel>Object2</relationshipLabel>
        <relationshipName>Object2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object2</label>
        <referenceTo>Object2__c</referenceTo>
        <relationshipLabel>Object2 (Object2)</relationshipLabel>
        <relationshipName>Object21</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>